[gd_scene load_steps=6 format=3 uid="uid://dkmk3icxufsem"]

[ext_resource type="Texture2D" uid="uid://cmlwq6qd86yay" path="res://art/level1.png" id="1_n7mou"]
[ext_resource type="Script" path="res://choose_level.gd" id="1_qpcps"]
[ext_resource type="Texture2D" uid="uid://cjn867mgo2vm8" path="res://art/level2.jpg" id="3_5j4gn"]
[ext_resource type="Texture2D" uid="uid://qdxs5tuquj1j" path="res://art/level3.jpg" id="4_jbct7"]
[ext_resource type="Texture2D" uid="uid://d1d5gwdey3b78" path="res://art/level4 (2).jpg" id="5_j6mw6"]

[node name="choose_level" type="Node2D"]
script = ExtResource("1_qpcps")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 349.0
offset_top = 79.0
offset_right = 794.0
offset_bottom = 564.0
grow_horizontal = 2
grow_vertical = 2

[node name="level1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level 1
"
icon = ExtResource("1_n7mou")

[node name="level2" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level 2"
icon = ExtResource("3_5j4gn")

[node name="level3" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level 3"
icon = ExtResource("4_jbct7")

[node name="level4" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Level 4"
icon = ExtResource("5_j6mw6")

[node name="Button" type="Button" parent="."]
anchors_preset = -1
offset_left = 518.0
offset_top = 585.0
offset_right = 627.0
offset_bottom = 622.0
grow_horizontal = 2
grow_vertical = 0
text = "Back"

[connection signal="pressed" from="VBoxContainer/level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="VBoxContainer/level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer/level3" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer/level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="VBoxContainer/level4" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="VBoxContainer/level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
